[FLINK-38522][cdc connector mysql] fix java 8 compatibility issues in test, throw runtime exception when we have invalid ssl mode